--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="Images/techis-logo.png" />
+    <link rel="icon" type="image/png" href="images/techis-logo.png" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
@@ -49,7 +49,7 @@
     </nav>
     <div id="about">
       <h2><span class="font-primary">A</span>bout</h2>
-      <img src="Images/my_img.jpg"/>
+      <img src="images/my_img.jpg"/>
       <div class="name">Jitendra Rathod</div>
       <div class="vocation">Web Application Developer</div>
       <div class="skills">
@@ -72,7 +72,7 @@
             <div class="card mb-3">
                 <div class="row">
                     <div class="col-md-4">
-                        <img src="Images/project-twitter.png" class="img-fluid rounded-start" alt="..." />
+                        <img src="images/project-twitter.png" class="img-fluid rounded-start" alt="..." />
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
